--- a/Tag6_Montag_08042024_Teil2.ipynb
+++ b/Tag6_Montag_08042024_Teil2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtRrw12DFu+F/vzkyHRQOi",
+      "authorship_tag": "ABX9TyMYGNZBBOP0Ni8VVhqsG7y7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,28 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LR_jpmkOyS64",
-        "outputId": "3681ebb9-8cd1-4140-f856-10734fddb4b6"
+        "outputId": "8995647a-8082-421b-de03-39c807d57c8e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "              year  imdb_rating\n",
-            "count   219.000000   219.000000\n",
-            "mean   2002.972603     6.988584\n",
-            "std      11.157306     0.969066\n",
-            "min    1937.000000     4.200000\n",
-            "25%    1999.000000     6.400000\n",
-            "50%    2006.000000     7.100000\n",
-            "75%    2011.000000     7.700000\n",
-            "max    2015.000000     9.000000\n"
+            "  id                                       name   genre    year  imdb_rating\n",
+            "2  3                               The Avengers  action  2012.0          8.1\n",
+            "3  4                            The Dark Knight  action  2008.0          9.0\n",
+            "4  5  Star Wars: Episode I - The Phantom Menace  action  1999.0          6.6\n"
           ]
         }
       ],
@@ -58,13 +53,35 @@
         "\n",
         "df = pd.read_csv(\"imdb.csv\")\n",
         "\n",
-        "#print(df)\n",
+        "# print(df)\n",
         "\n",
         "# Inspect\n",
-        "#print(df.head())\n",
-        "#print(df.info())\n",
-        "#print(df.describe())"
+        "# print(df.head())\n",
+        "# print(df.info())\n",
+        "# print(df.describe())\n",
+        "\n",
+        "#Select a column\n",
+        "#print(df[\"name\"])\n",
+        "\n",
+        "#Select multiple columns\n",
+        "# ab = df[[\"name\", \"imdb_rating\"]]\n",
+        "#  print(ab)\n",
+        "\n",
+        "#Select a specific row\n",
+        "# print(df.iloc[2])\n",
+        "\n",
+        "#Select multiple rows\n",
+        "print(df.loc[2:4])"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OIQZ6xXO1vsO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
